--- a/.github/workflows/sample_workflow_format_validator.yml
+++ b/.github/workflows/sample_workflow_format_validator.yml
@@ -77,3 +77,17 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           path: ./summary.txt
+  pass-fail:
+    name: fail-if-errors
+    runs-on: ubuntu-latest
+    needs: validate-format-twb
+    outputs:
+      number: ${{ steps.step1.outputs.test }}
+    steps:
+      - uses: actions/download-artifact@v2
+        with:
+          name: outputs
+      - name: set-number-of-fail-if-errors
+        run: echo '::set-output name=NUMBER_OF_ERRORS::$(cat output.txt | grep ALERT | wc -l)'
+      - name: decision      
+        run: cat sample_output.txt | grep ALERT | wc -l
