ci: include output in ci

--- a/.github/workflows/sample_workflow_format_validator.yml
+++ b/.github/workflows/sample_workflow_format_validator.yml
@@ -89,6 +89,8 @@ jobs:
           name: outputs
       - name: find-file
         run: |
+          pwd 
+          ls -al
           find . -name outputs.txt
       - name: set-number-of-fail-if-errors
         id: setnumber
