--- a/.github/workflows/sample_workflow_format_validator.yml
+++ b/.github/workflows/sample_workflow_format_validator.yml
@@ -1,7 +1,7 @@
 name: GitHub Actions Check Style of Modified Files
 on: [pull_request]
 env:
-  max_number_errors: 35
+  MAX_NUMBER_ERRORS: 35
 jobs:
   changedfiles:
     runs-on: ubuntu-latest
