--- a/.github/workflows/sample_workflow_format_validator.yml
+++ b/.github/workflows/sample_workflow_format_validator.yml
@@ -93,16 +93,11 @@ jobs:
       - name: set-number-of-fail-if-errors
         id: setnumber
         run: |
-          echo 'The maximum number of errors allowed is ${MAX_NUMBER_ERRORS}'
           echo 'The maximum number of errors allowed is '$MAX_NUMBER_ERRORS
-
-          echo 'The maximum number of errors allowed is '${MAX_NUMBER_ERRORS}
-
-          env
           echo '::set-output name=number-of-errors::$(cat outputs.txt | grep ALERT | wc -l)'
       # Should we stop
       - name: decision-pass-fail      
-        if: ${{ steps.setnumber.outputs.number-of-errors }} > ${{ env.MAX_NUMBER_ERRORS }}
+        if: ${{ steps.setnumber.outputs.number-of-errors }} > env.MAX_NUMBER_ERRORS
         run: |
           echo ${{ steps.setnumber.outputs.number-of-errors }}
           echo "::error ::Invalid formatting found, abort PR".
