--- a/.github/workflows/show_all_envs.yml
+++ b/.github/workflows/show_all_envs.yml
@@ -1,5 +1,7 @@
 name: GitHub Actions Check Style of Modified Files
-on: [pull_request]
+on:
+  pull_request:
+    branches: [dev]
 jobs:
   show-all-envs:
     runs-on: ubuntu-latest
