update main action

--- a/.github/workflows/sample_workflow_format_validator.yml
+++ b/.github/workflows/sample_workflow_format_validator.yml
@@ -64,6 +64,7 @@ jobs:
              find . -name outputs.txt
              echo "processing file"
              cat ./outputs.txt | grep 'processing\|INVALID\|ALERT' > summary.txt
+             echo "adding to summary"
              echo "" >> summary.txt
              echo "" >> summary.txt
              echo "" >> summary.txt
