--- a/.github/workflows/sample_workflow_format_validator.yml
+++ b/.github/workflows/sample_workflow_format_validator.yml
@@ -37,7 +37,7 @@ jobs:
         ###
         #########
       - name: Validate Tableau Format
-        uses: dsmdavid/action-tableau-format-validator@patch-missing-output
+        uses: dsmdavid/action-tableau-format-validator@v1.0.3
         with:
           # Use the output created in the step above
           modified_files: ${{needs.changedfiles.outputs.all}}
