Add badge - failing in example (#3)
* docs: add badge to readme
* update action version
* update main action

--- a/.github/workflows/sample_workflow_format_validator.yml
+++ b/.github/workflows/sample_workflow_format_validator.yml
@@ -37,7 +37,7 @@ jobs:
         ###
         #########
       - name: Validate Tableau Format
-        uses: dsmdavid/action-tableau-format-validator@v1.0.0
+        uses: dsmdavid/action-tableau-format-validator@v1.0.3
         with:
           # Use the output created in the step above
           modified_files: ${{needs.changedfiles.outputs.all}}
@@ -60,8 +60,11 @@ jobs:
         # Create a summary for a PR comment
       - name: check file exists
         run: |
+             echo "finding file"
              find . -name outputs.txt
+             echo "processing file"
              cat ./outputs.txt | grep 'processing\|INVALID\|ALERT' > summary.txt
+             echo "adding to summary"
              echo "" >> summary.txt
              echo "" >> summary.txt
              echo "" >> summary.txt
@@ -69,7 +72,6 @@ jobs:
              echo " --------- --------- --------" >> summary.txt
              echo "Detailed review below:" >> summary.txt
              cat ./outputs.txt >> summary.txt
-             sed -i 's;\processing /github/workspace\(.*\)$;## \1;gi' summary.txt
 
       - name: comment PR
         uses: machine-learning-apps/pr-comment@master
